--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 				<div class="top">
 
 					<audio class="tlSound" preload="auto" loop >
-	    	<!--<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"> -->
-	    				<source src="sounds/a.wav">
+	    			<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3">
 	    				</source>
 					</audio>
 					<button type="button" class="btn pie topleft" value=0 enabled></button>
