--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="simon">
 				<div class="top">
 
-					<audio class="tlSound" preload="auto" loop >
+					<audio class="tlSound" preload="auto" >
 	    			<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3">
 	    				</source>
 					</audio>
